alignment issue

--- a/src/sass/tech-theme.scss
+++ b/src/sass/tech-theme.scss
@@ -2912,12 +2912,12 @@ section#customers_list .customers_list_slider.slick-slider .slick-list{
                 }
                 &:before{
                     font-size: 46px;
-                    margin-top: -22px;
-                    margin-left: -10px;
+                    margin-top: -20px;
+                    margin-left: -8px;
                     @media only screen and (max-width: 1141px){
                         font-size: 46px;
-                        margin-top: -22px;
-                        margin-left: -10px;
+                        margin-top: -20px;
+                        margin-left: -8px;
                     }
                 }
                 
